--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zoe Malee</title>
 </head>
 <body>
-    <p>Hi Hello</p>
+    <h1>DSGN360 Digital Media Design</h1>
+    <h2>Winter 2023</h2> 
 </body>
-
-
+<nav>
+    <ul>
+        <li>Project 1</li>
+        <li>Project 1 Process</li>
+        <li>Project 2</li>
+        <li>Project 2 Process</li>
+    </ul>
+</nav>
+<article>
+    <img src="images/profilephoto.png"/>
+</article>
 </html>
