--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Zoe Malee</title>
 </head>
 <body>
-    <h1>DSGN360 Digital Media Design</h1>
-    <h2>Winter 2023</h2> 
+    <h1>Zoe Malee</h1>
+    <h2>DSGN360 Digital Media Design</h2>
+    <h3>Winter 2023</h3> 
 <nav>
     <ul>
         <li>Project 1</li>
