--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 </nav>
 <article>
     <img src="images/profilephoto.png"/>
+<body>
+    <h2>BIO</h2>
+    <h4>Hi everyboy! My name is Zoe, 
+        currently a Design student at Western. 
+        This is my first every website, so please forgive me,
+         I know it's ugly. I love learning new things 
+         (especially things that I can make with my hands)</h4>
+</body>
 </article>
 </body>
 </html>
