--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h3>Winter 2023</h3> 
 <nav>
     <ul>
-        <li>Project 1</li>
-        <li>Project 1 Process</li>
-        <li>Project 2</li>
-        <li>Project 2 Process</li>
+        <li><a href="project-1/index.html"></a>PROJECT 1</li>
+        <li><a href="project-1-process/index.html"></a>PROJECT 1 PROCESS</li>
+        <li><a href="project-2/index.html"></a>PROJECT 2</li>
+        <li><a href="project-2-process/index.html"></a>PROJECT 2 PROCESS</li>
     </ul>
 </nav>
 <hr>
