--- a/index.html
+++ b/index.html
@@ -6,30 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoe Malee</title>
 </head>
-<body>
-    <h1>Zoe Malee</h1>
-    <h2>DSGN360 Digital Media Design</h2>
-    <h3>Winter 2023</h3> 
-<nav>
-    <ul>
-        <li><a href="project-1/index.html"></a>PROJECT 1</li>
-        <li><a href="project-1-process/index.html"></a>PROJECT 1 PROCESS</li>
-        <li><a href="project-2/index.html"></a>PROJECT 2</li>
-        <li><a href="project-2-process/index.html"></a>PROJECT 2 PROCESS</li>
-    </ul>
-</nav>
+
+<header>
+
+    <body>
+        <h1>Zoe Malee</h1>
+        <h2>DSGN360 Digital Media Design</h2>
+        <h3>Winter 2023</h3> 
+        <nav>
+            <ul>
+                <li><a href="project-1/index.html"></a>PROJECT 1</li>
+                <li><a href="project-1-process/index.html"></a>PROJECT 1 PROCESS</li>
+                <li><a href="project-2/index.html"></a>PROJECT 2</li>
+                <li><a href="project-2-process/index.html"></a>PROJECT 2 PROCESS</li>
+            </ul>
+        </nav>
+
+    </body>
+
+</header>
+
 <hr>
+
 <article>
+    
     <img src="images/profilephoto.png"/>
-<body>
-    <h2>BIO</h2>
-    <h4>Hi everyboy! My name is Zoe, 
-        currently a Design student at Western. 
-        This is my first every website, so please forgive me,
-         I know it's ugly. I love learning new things 
-         (especially things that I can make with my hands)</h4>
-    <br>
-</body>
+    <body>
+        <h2>BIO</h2>
+        <h4>Hi everyboy! My name is Zoe, 
+            currently a Design student at Western. 
+            This is my first every website, so please forgive me,
+            I know it's ugly. I love learning new things 
+            (especially things that I can make with my hands)</h4>
+        <br>
+    </body>
+
 </article>
-</body>
+
 </html>
