--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <h3>Winter 2023</h3> 
         <nav>
             <ul>
-                <li><a href="project-1/index.html"></a>PROJECT 1</li>
-                <li><a href="project-1-process/index.html"></a>PROJECT 1 PROCESS</li>
-                <li><a href="project-2/index.html"></a>PROJECT 2</li>
-                <li><a href="project-2-process/index.html"></a>PROJECT 2 PROCESS</li>
+                <li><a href="project-1/index.html">PROJECT 1</a></li>
+                <li><a href="project-1-process/index.html">PROJECT 1 PROCESS</a></li>
+                <li><a href="project-2/index.html">PROJECT 2</a></li>
+                <li><a href="project-2-process/index.html">PROJECT 2 PROCESS</a></li>
             </ul>
         </nav>
 
