--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p>Since we have just transitioned into the new year and resolution mojo is high, I’ll share a couple 
             of my 2023 Ins and Outs:</p>
         <br>
-        <p>In:</p>
+        <p class="capitalize">In:</p>
         <ul> 
             <li>More fun</li>
             <li>Coffee</li>
@@ -58,7 +58,7 @@
             <li>Being bored</li>
         </ul>
         <br>
-        <p>Out:</p>
+        <p class="capitalize">Out:</p>
         <ul>
             <li>FOMO</li>
             <li>All nighters (homework related)</li>
