--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <article>
         
         <img src="images/profilephoto.png"/>
-        <h2>BIO</h2>
+        <h2 class="dottedunderline">BIO</h2>
         <p>Hi everybody…
             My name is Zoe, I am a Graphic Design student at Western Washington University in Bellingham. 
             I enjoy illustration, packaging design, and motion design, anything that lets me get a little artsy. 
@@ -73,8 +73,8 @@
 
     </article>
     <footer>
-        <p><a href="mailto:zoemalee@gmail.com">zoemalee@gmail.com</a></p>
         <p>copyright 2023</p>
+        <p><a href="mailto:zoemalee@gmail.com">zoemalee@gmail.com</a></p>
     </footer>
 
 </body>
