--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <ul>
                 <li><a href="https://www.figma.com/proto/zewEB4GdMNndcpH92auIuy/
                     SCF-Redesign?page-id=0%3A1&node-id=14%3A66&viewport=-1418%2C1649%2C0.
-                    36&scaling=scale-down-width&starting-point-node-id=9%3A8">PROJECT 1</a></li>
+                    36&scaling=scale-down-width&starting-point-node-id=9%3A8" 
+                    target="_blank">PROJECT 1</a></li>
                 <li><a href="project-1-process/index.html">PROJECT 1 PROCESS</a></li>
                 <li><a href="project-2/index.html">PROJECT 2</a></li>
                 <li><a href="project-2-process/index.html">PROJECT 2 PROCESS</a></li>
