--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                     SCF-Redesign?page-id=0%3A1&node-id=14%3A66&viewport=-1418%2C1649%2C0.
                     36&scaling=scale-down-width&starting-point-node-id=9%3A8" 
                     target="_blank">PROJECT 1</a></li>
+                <li><a href="https://www.figma.com/proto/zewEB4GdMNndcpH92auIuy/SCF-Redesign?
+                    page-id=168%3A654&node-id=168%3A704&viewport=1887%2C902%2C0.69&scaling=scale-
+                    down&starting-point-node-id=168%3A655&show-proto-sidebar=1" 
+                    target="_blank"</a>PROJECT 1 MOBILE</a></li>
                 <li><a href="project-1-process/index.html">PROJECT 1 PROCESS</a></li>
                 <li><a href="project-2/index.html">PROJECT 2</a></li>
                 <li><a href="project-2-process/index.html">PROJECT 2 PROCESS</a></li>
