--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     page-id=168%3A654&node-id=168%3A704&viewport=1887%2C902%2C0.69&scaling=scale-
                     down&starting-point-node-id=168%3A655&show-proto-sidebar=1" 
                     target="_blank"</a>PROJECT 1 MOBILE</a></li>
-                <li><a href="project-1-process/index.html">PROJECT 1 PROCESS</a></li>
+                <li><a href="pdf/SCFCaseStudy.pdf"
+                    target="_blank">PROJECT 1 PROCESS</a></li>
                 <li><a href="project-2/index.html">PROJECT 2</a></li>
                 <li><a href="project-2-process/index.html">PROJECT 2 PROCESS</a></li>
             </ul>
