--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><a href="https://www.figma.com/proto/zewEB4GdMNndcpH92auIuy/SCF-Redesign?
                         page-id=168%3A654&node-id=168%3A704&viewport=1887%2C902%2C0.69&scaling=scale-
                         down&starting-point-node-id=168%3A655&show-proto-sidebar=1" 
-                        target="_blank"</a>PROJECT 1 MOBILE</a></li>
+                        target="_blank">PROJECT 1 MOBILE</a></li>
                     <li><a href="pdf/SCFCaseStudy.pdf"
                         target="_blank">PROJECT 1 PROCESS</a></li>
                     <li><a href="project-2/index.html">PROJECT 2</a></li>
@@ -51,7 +51,7 @@
             <article>
                 
                 <img src="images/profilephoto.png"/>
-                <div class="text-columnn-left">
+                <div class="text-columnn-right">
                     <div class="paragraph">
                         <h2 class="dottedunderline">A Bit About Me</h2>
                         <br>
@@ -71,7 +71,8 @@
                     <br>
                     <div class="text-column-left paragraph">
                         <p>Since we have just transitioned into the new year and resolution mojo is high, I’ll share a couple 
-                            of my 2023 Ins and Outs:</p>
+                            of my 2023 Ins and Outs:
+                        </p>
                         <br>
                         
                             <div class="col-49"> 
