--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                         <li>More ski</li>
                                         <li>Bike,bike,bike</li>
                                         <li>Being outside</li>
-                                        <li>Annie Taylor’s arm workout</li>
+                                        <li>Annie Taylor</li>
                                         <li>Smelly candles</li>
                                         <li>Dressing up</li>
                                         <li>Movies</li>
