--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         </article>
 
-        <div class="row rowpadding">
+        <div class="row rowpadding flexbox">
 
             <div class="six columns">
 
