--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <div class="twelve.columns">
                 <nav>
                     <ul>
-                        <li><a href="https://www.figma.com/proto/zewEB4GdMNndcpH92auIuy/
-                            SCF-Redesign?page-id=0%3A1&node-id=14%3A66&viewport=-1418%2C1649%2C0.
-                            36&scaling=scale-down-width&starting-point-node-id=9%3A8" 
+                        <li><a href="https://www.figma.com/proto/zewEB4GdMNndcpH92auIuy/SCF-Redesign?
+                            page-id=0%3A1&node-id=9%3A8&viewport=1386%2C-1798%2C0.56&scaling=scale-
+                            down-width&starting-point-node-id=9%3A8" 
                             target="_blank">PROJECT 1</a></li>
                         <li><a href="https://www.figma.com/proto/zewEB4GdMNndcpH92auIuy/SCF-Redesign?
                             page-id=168%3A654&node-id=168%3A704&viewport=1887%2C902%2C0.69&scaling=scale-
