--- a/360final/index.html
+++ b/360final/index.html
@@ -9,18 +9,21 @@
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Jost:ital,
-    wght@0,400;0,500;0,800;1,400;1,800&family=Oxanium:wght@500;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500
+    ;800&family=Oxanium:wght@500;700;800&display=swap" rel="stylesheet">
 
     <title>Sending Out the Signal</title>
 </head>
 <body>
    
     <div>
-        Sending Out the
+        <h3 class="jostmedium">SENDING OUT THE</h3>
 
-        Signal
-        from a BOMB Magazine interview with Caledonia Curry, known as Swoon
+        <h1 class="oxanium">SIGNAL</h1>
+
+        <h6>from a BOMB Magazine interview with Caledonia Curry, known as Swoon</h6>
         
         <img src="images/signal.svg" alt="signal"/>
 
@@ -29,7 +32,7 @@
 
     <div>
         
-        Swoon
+        <h2>Swoon</h2>
         Caledonia Curry, known as Swoon, is a contemporary artist and filmmaker 
         recognized around the world for her pioneering vision of public artwork. 
         Best known as one of the first women Street Artists, Swoon re-envisions the 
@@ -44,7 +47,7 @@
 
     <div>
 
-        the
+        <h4>the</h4>
         <h1>INTERVIEW</h1>
 
         This excerpt captures the last two qustions of Swoon's interview with Katie
@@ -53,7 +56,7 @@
     </div>
 
     <div>
-        Katie Peyton... 
+        <h5>Katie Peyton... </h5>
 
         […] Politically engaged art is often dystopian. When we’re surrounded by 
         artistic dystopias, a part of us starts getting used to it, and expecting it. 
@@ -67,21 +70,21 @@
     </div>
 
     <div>
-        ...Swoon
+        <h5>...Swoon</h5>
         "
         'We can only want what we can imagine' that's so true.
         "
     </div>
 
     <div>
-        Katie Peyton... 
+        <h5>Katie Peyton...</h5>
         You could’ve easily begun your career from a place of cynicism. But your 
         overall message is hopeful. We can do it better. This is better. As a socially 
         engaged artist, how do you hang onto hope?
     </div>
 
     <div>
-        ...Swoon
+        <h5>...Swoon</h5>
 
         <img src="images/Miami-edge.svg" alt="miami"/>
 
@@ -118,14 +121,14 @@
     </div>
 
     <div>
-        Katie Peyton... 
+        <h5>Katie Peyton...</h5>
         Last question. There’s a common criticism that artists don’t get out into the 
         world enough, or if they do, they stay locked in a sort of arts-focused circle. 
         What is your advice to artists who may feel locked away in their studios?
     </div>
 
     <div>
-        ...Swoon
+       <h5>...Swoon</h5>
 
         <img src="images/tornpapercoomp.svg" alt="tornpaper"/>
 
@@ -173,12 +176,12 @@
     </div>
 
     <footer>
-        References
+        <h6>References
         Sending out the signal: Swoon interviewed (no date) BOMB Magazine.
         https://bombmagazine.org/articles/sending-out-the-signal-swoon-interviewed/
 
         Images from Swoon studios
-        https://swoonstudio.org/
+        https://swoonstudio.org/</h6>
     </footer>
 
 
