--- a/360final/index.html
+++ b/360final/index.html
@@ -25,7 +25,7 @@
 
         <h6 class="jost">from a BOMB Magazine interview with Caledonia Curry, known as Swoon</h6>
         
-        <img src="images/signal.svg" alt="signal"/>
+        <img src="images/signal-01.svg" alt="signal"/>
 
         <!--spiderweb image-->
     </div>
