text/image overlap

--- a/360final/index.html
+++ b/360final/index.html
@@ -30,17 +30,18 @@
         <!--spiderweb image-->
     </div>
 
-    <div class="row">
+    <div class="row textoverlap">
         
-        <h2 class="oxanium">Swoon</h2>
-        <p class="jost">
-            Caledonia Curry, known as Swoon, is a contemporary artist and filmmaker 
-            recognized around the world for her pioneering vision of public artwork. 
-            Best known as one of the first women Street Artists, Swoon re-envisions the 
-            communities we live in towards a more equitable and hopeful future through 
-            immersive installations and community-based projects.
-        </p>
-
+        <div class="topleft four columns">
+            <h2 class="oxanium">Swoon</h2>
+            <p class="jost">
+                Caledonia Curry, known as Swoon, is a contemporary artist and filmmaker 
+                recognized around the world for her pioneering vision of public artwork. 
+                Best known as one of the first women Street Artists, Swoon re-envisions the 
+                communities we live in towards a more equitable and hopeful future through 
+                immersive installations and community-based projects.
+            </p>
+        </div>
         <img class="bkgpinkhalf" src="images/swoon-comp.svg" alt="swoon"/>
 
     </div>
