--- a/360final/index.html
+++ b/360final/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
    
-    <div id="landing" class="row bkgpink">
+    <div id="landing" class="row bottompad bkgpink">
         <h3 class="title">SENDING OUT THE</h3>
 
         <h1 id="signal">SIGNAL</h1>
@@ -46,7 +46,7 @@
                 immersive installations and community-based projects.
             </p>
         </div>
-        <img class="bkgpinkhalf" src="images/swoon-comp.svg" alt="swoon"/>
+        <img src="images/swoon-comp.svg" alt="swoon"/>
 
     </div>
 
