--- a/360final/index.html
+++ b/360final/index.html
@@ -37,7 +37,7 @@
     <div class="row textoverlap">
         
         <div class="topleft four columns textmargin">
-            <h2 class="oxanium">Swoon</h2>
+            <h2 class="oxanium uppercase bold tracksmall pinktext">Swoon</h2>
             <p class="jost">
                 Caledonia Curry, known as Swoon, is a contemporary artist and filmmaker 
                 recognized around the world for her pioneering vision of public artwork. 
@@ -254,13 +254,17 @@
     </div>
     
 
-    <footer class="jost">
-        <p>References
-        Sending out the signal: Swoon interviewed (no date) BOMB Magazine.
-        https://bombmagazine.org/articles/sending-out-the-signal-swoon-interviewed/
+    <footer class="jost textmargin">
+        <p>
+            References
+            Sending out the signal: Swoon interviewed (no date) BOMB Magazine.
+            https://bombmagazine.org/articles/sending-out-the-signal-swoon-interviewed/
+        </p>
 
-        Images from Swoon studios
-        https://swoonstudio.org/</p>
+        <p>
+            Images from Swoon studios
+            https://swoonstudio.org/
+        </p>       
     </footer>
 
 
