--- a/360final/index.html
+++ b/360final/index.html
@@ -53,8 +53,8 @@
     <div class="row">
 
         <div class="oxanium textmargin">
-            <h4>the</h4>
-            <h1>INTERVIEW</h1>
+            <h4 class="bold">the</h4>
+            <h1 class="bold">INTERVIEW</h1>
         </div>
 
         <p class="jost textmargin">
@@ -265,6 +265,7 @@
             Images from Swoon studios
             https://swoonstudio.org/
         </p>       
+   
     </footer>
 
 
