--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
                         target="_blank">PROJECT 1 MOBILE</a></li>
                     <li><a href="pdf/SCFCaseStudy.pdf"
                         target="_blank">PROJECT 1 PROCESS</a></li>
-                    <li><a href="https://www.figma.com/proto/ONYfjURwLmXi8GCMjtrs91/Interactive-Web?
-                        page-id=0%3A1&node-id=90-11&viewport=345%2C-407%2C0.31&scaling=scale-down-width"
+                    <li><a href="https://zoemalee.github.io/360final/"
                         target="_blank">PROJECT 2</a></li>
-                    <li><a href="project-2-process/index.html">PROJECT 2 PROCESS</a></li>
+                    <li><a href="https://www.figma.com/proto/ONYfjURwLmXi8GCMjtrs91/Interactive-
+                        Web?page-id=0%3A1&node-id=90%3A11&viewport=345%2C-407%2C0.31&scaling=scale-down-width"
+                        target="_blank">PROJECT 2 PROTOTYPE</a></li>
+                    <li><a href="360final/pdf/Case Study.pdf">PROJECT 2 PROCESS</a></li>
                 </ul>
             </nav>
         </div>
